# TEC-DATOSII-pagedArray

./: ArrayConsolePrinter.cpp  ArrayConsolePrinter.h  CMakeLists.txt  Insertionsort.cpp  Insertionsort.h  Quicksort.cpp  Quicksort.h  README.md  Selectionsort.cpp  Selectionsort.h  fileGnerator.cpp  fileGnerator.h  main.cpp  paged_Array.cpp  paged_Array.h  slotManagr.cpp  slotManagr.h
